[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sol-tools"
version = "1.0.0"
description = "Ultimate CLI toolkit for crypto analysis and operations"
readme = "README.md"
authors = [
    {name = "Will", email = "will@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "rich>=13.5.3",
    "inquirer>=3.1.3",
    "colorama>=0.4.6",
    "pyyaml>=6.0.1",
    "dune-client>=1.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
    "websockets>=11.0.3",
    "python-telegram-bot>=13.15",
    "web3>=6.11.3",
    "solders>=0.18.1",
    "solana>=0.29.2",
    "pandas>=2.0.3",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
    "cryptography>=41.0.4",
]

[project.scripts]
sol-tools = "sol_tools.cli:main"
start = "sol_tools.cli:main"
sol-tools-clean = "sol_tools.utils.cleanup:clean_caches"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88